Settings panel translation added

--- a/Brainf_ck-sharp.UWP/MultilingualResources/Brainf_ck-sharp.UWP.it.xlf
+++ b/Brainf_ck-sharp.UWP/MultilingualResources/Brainf_ck-sharp.UWP.it.xlf
@@ -604,11 +604,39 @@ In questo modo sarà più facile aiutarti e potrai contribuire a rendere l'app a
         </trans-unit>
         <trans-unit id="Settings" translate="yes" xml:space="preserve">
           <source>Settings</source>
-          <target state="new">Settings</target>
+          <target state="translated">Impostazioni</target>
         </trans-unit>
         <trans-unit id="SettingsButton.Label" translate="yes" xml:space="preserve">
           <source>Settings</source>
-          <target state="new">Settings</target>
+          <target state="translated">Impostazioni</target>
+        </trans-unit>
+        <trans-unit id="AutoIndentTitle.Text" translate="yes" xml:space="preserve">
+          <source>Auto indent brackets</source>
+          <target state="translated">Indenta automaticamente parentesi</target>
+        </trans-unit>
+        <trans-unit id="BackgroundBlur" translate="yes" xml:space="preserve">
+          <source>Background blur</source>
+          <target state="translated">Sfocatura sfondo</target>
+        </trans-unit>
+        <trans-unit id="BlurModeTitle.Text" translate="yes" xml:space="preserve">
+          <source>Preferred blur mode</source>
+          <target state="translated">Modalità blur preferita</target>
+        </trans-unit>
+        <trans-unit id="BracketsStyleTitle.Text" translate="yes" xml:space="preserve">
+          <source>Brackets style</source>
+          <target state="translated">Formattazione parentesi</target>
+        </trans-unit>
+        <trans-unit id="InAppBlur" translate="yes" xml:space="preserve">
+          <source>In-app blur</source>
+          <target state="translated">Sfocatura in-app</target>
+        </trans-unit>
+        <trans-unit id="NewLine" translate="yes" xml:space="preserve">
+          <source>New line</source>
+          <target state="translated">A capo</target>
+        </trans-unit>
+        <trans-unit id="SameLine" translate="yes" xml:space="preserve">
+          <source>Same line</source>
+          <target state="translated">Stessa riga</target>
         </trans-unit>
       </group>
     </body>
