--- a/Brainf_ck-sharp.UWP/Strings/en-US/Resources.resw
+++ b/Brainf_ck-sharp.UWP/Strings/en-US/Resources.resw
@@ -565,6 +565,27 @@ This way he'll be able to help you!</value>
     <value>Are you enjoying it so far?</value>
     <comment>It's talking about the app itself</comment>
   </data>
+  <data name="AutoIndentTitle.Text" xml:space="preserve">
+    <value>Auto indent brackets</value>
+  </data>
+  <data name="BackgroundBlur" xml:space="preserve">
+    <value>Background blur</value>
+  </data>
+  <data name="BlurModeTitle.Text" xml:space="preserve">
+    <value>Preferred blur mode</value>
+  </data>
+  <data name="BracketsStyleTitle.Text" xml:space="preserve">
+    <value>Brackets style</value>
+  </data>
+  <data name="InAppBlur" xml:space="preserve">
+    <value>In-app blur</value>
+  </data>
+  <data name="NewLine" xml:space="preserve">
+    <value>New line</value>
+  </data>
+  <data name="SameLine" xml:space="preserve">
+    <value>Same line</value>
+  </data>
   <data name="Settings" xml:space="preserve">
     <value>Settings</value>
   </data>
