--- a/Brainf_ck-sharp.UWP/Strings/en-US/Resources.resw
+++ b/Brainf_ck-sharp.UWP/Strings/en-US/Resources.resw
@@ -592,4 +592,7 @@ This way he'll be able to help you!</value>
   <data name="SettingsButton.Label" xml:space="preserve">
     <value>Settings</value>
   </data>
+  <data name="TabLength.Text" xml:space="preserve">
+    <value>Tab length</value>
+  </data>
 </root>
