--- a/Brainf_ck-sharp.UWP/MultilingualResources/Brainf_ck-sharp.UWP.it.xlf
+++ b/Brainf_ck-sharp.UWP/MultilingualResources/Brainf_ck-sharp.UWP.it.xlf
@@ -658,6 +658,11 @@ In questo modo sarà più facile aiutarti e potrai contribuire a rendere l'app a
           <source>Print value</source>
           <target state="translated">Stampa valore</target>
         </trans-unit>
+        <trans-unit id="Default" translate="yes" xml:space="preserve">
+          <source>Default</source>
+          <target state="new">Default</target>
+          <note from="MultilingualBuild" annotates="source" priority="2">The default theme</note>
+        </trans-unit>
       </group>
     </body>
   </file>
