--- a/Brainf_ck-sharp.UWP/MultilingualResources/Brainf_ck-sharp.UWP.it.xlf
+++ b/Brainf_ck-sharp.UWP/MultilingualResources/Brainf_ck-sharp.UWP.it.xlf
@@ -663,6 +663,10 @@ In questo modo sarà più facile aiutarti e potrai contribuire a rendere l'app a
           <target state="translated">Predefinito</target>
           <note from="MultilingualBuild" annotates="source" priority="2">The default theme</note>
         </trans-unit>
+        <trans-unit id="AutosaveTitle.Text" translate="yes" xml:space="preserve">
+          <source>Autosave loaded documents</source>
+          <target state="translated">Salvataggio automatico</target>
+        </trans-unit>
       </group>
     </body>
   </file>
