Show status bar setting and UI added (not working yet)

--- a/Brainf_ck-sharp.UWP/Strings/en-US/Resources.resw
+++ b/Brainf_ck-sharp.UWP/Strings/en-US/Resources.resw
@@ -614,4 +614,7 @@ This way he'll be able to help you!</value>
   <data name="AutosaveTitle.Text" xml:space="preserve">
     <value>Autosave loaded documents</value>
   </data>
+  <data name="ShowStatusBarTitle.Text" xml:space="preserve">
+    <value>Show status bar</value>
+  </data>
 </root>
