Added shell UI update when showing/hiding the status bar

--- a/Brainf_ck-sharp.UWP/MultilingualResources/Brainf_ck-sharp.UWP.it.xlf
+++ b/Brainf_ck-sharp.UWP/MultilingualResources/Brainf_ck-sharp.UWP.it.xlf
@@ -669,7 +669,7 @@ In questo modo sarà più facile aiutarti e potrai contribuire a rendere l'app a
         </trans-unit>
         <trans-unit id="ShowStatusBarTitle.Text" translate="yes" xml:space="preserve">
           <source>Show status bar</source>
-          <target state="new">Show status bar</target>
+          <target state="translated">Mostra status bar</target>
         </trans-unit>
       </group>
     </body>
