Added zommed out settings sections descriptions

--- a/Brainf_ck-sharp.UWP/Strings/en-US/Resources.resw
+++ b/Brainf_ck-sharp.UWP/Strings/en-US/Resources.resw
@@ -623,4 +623,10 @@ This way he'll be able to help you!</value>
   <data name="ShowStatusBarTitle.Text" xml:space="preserve">
     <value>Show status bar</value>
   </data>
+  <data name="LowercaseAvailableSettings" xml:space="preserve">
+    <value>available settings</value>
+  </data>
+  <data name="LowercaseSingleAvailableSettings" xml:space="preserve">
+    <value>available setting</value>
+  </data>
 </root>
