--- a/Brainf_ck-sharp.UWP/MultilingualResources/Brainf_ck-sharp.UWP.it.xlf
+++ b/Brainf_ck-sharp.UWP/MultilingualResources/Brainf_ck-sharp.UWP.it.xlf
@@ -691,6 +691,10 @@ In questo modo sarà più facile aiutarti e potrai contribuire a rendere l'app a
           <source>themes pack locked</source>
           <target state="translated">pacchetto temi bloccato</target>
         </trans-unit>
+        <trans-unit id="RenderWhitespacesTitle.Text" translate="yes" xml:space="preserve">
+          <source>Render whitespaces</source>
+          <target state="translated">Mostra spazi e tabulazioni</target>
+        </trans-unit>
       </group>
     </body>
   </file>
