--- a/Brainf_ck-sharp.UWP/Strings/it/Resources.resw
+++ b/Brainf_ck-sharp.UWP/Strings/it/Resources.resw
@@ -526,4 +526,7 @@ In questo modo sarà più facile aiutarti e potrai contribuire a rendere l'app a
   <data name="ThemesPackLocked" xml:space="preserve">
     <value>pacchetto temi bloccato</value>
   </data>
+  <data name="RenderWhitespacesTitle.Text" xml:space="preserve">
+    <value>Mostra spazi e tabulazioni</value>
+  </data>
 </root>
