--- a/Brainf_ck-sharp.UWP/Strings/en-US/Resources.resw
+++ b/Brainf_ck-sharp.UWP/Strings/en-US/Resources.resw
@@ -653,6 +653,9 @@ This way he'll be able to help you!</value>
   <data name="ExUndefinedFunction" xml:space="preserve">
     <value>Undefined function call</value>
   </data>
+  <data name="ShowPBrainButtons.Text" xml:space="preserve">
+    <value>Show PBrain keyboard buttons</value>
+  </data>
   <data name="StackFrames" xml:space="preserve">
     <value>stack frames</value>
   </data>
