--- a/Brainf_ck-sharp.UWP/Strings/en-US/Resources.resw
+++ b/Brainf_ck-sharp.UWP/Strings/en-US/Resources.resw
@@ -659,4 +659,15 @@ This way he'll be able to help you!</value>
   <data name="StackFrames" xml:space="preserve">
     <value>stack frames</value>
   </data>
+  <data name="FunctionDefinitionsTitle" xml:space="preserve">
+    <value>Function definitions</value>
+  </data>
+  <data name="DefinedFunction" xml:space="preserve">
+    <value>defined function</value>
+    <comment>This will be "1 defined function"</comment>
+  </data>
+  <data name="DefinedFunctions" xml:space="preserve">
+    <value>defined functions</value>
+    <comment>This will be "n defined functions"</comment>
+  </data>
 </root>
