--- a/Brainf_ck-sharp.UWP/Strings/en-US/Resources.resw
+++ b/Brainf_ck-sharp.UWP/Strings/en-US/Resources.resw
@@ -670,4 +670,7 @@ This way he'll be able to help you!</value>
     <value>defined functions</value>
     <comment>This will be "n defined functions"</comment>
   </data>
+  <data name="CurrentState" xml:space="preserve">
+    <value>Current state</value>
+  </data>
 </root>
